Fix setting pane height on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -925,6 +925,6 @@ input:invalid {
 	}
 
 	.settings-pane {
-		height: 75vh;
+		height: calc(100vh - 100px);
 	}
 }
